# pkaprekar

./: CHANGELOG.md  README.md  flake.nix  pkaprekar.cabal
app/: Main.hs
src/: Kaprekar.hs
